workflow to publish package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@vivekdebugs/hello-world-package",
   "version": "1.0.0",
   "description": "",
+  "publishConfig": {
+    "@vivekdebugs:registry": "https://npm.pkg.github.com"
+  },
   "main": "index.js",
   "scripts": {
     "test": "exit 0"
