--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "publishConfig": {
-    "@vivekdebugs:registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com/@vivekdebugs"
   },
   "main": "index.js",
   "scripts": {
