--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -3,15 +3,28 @@ name: Node.js Package
 on: push
 
 jobs:
-  publish-gpr:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - run: npm ci
+      - run: npm test
+
+  publish-gpr:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
           registry-url: https://npm.pkg.github.com/
-          scope: '@vivekdebugs'
       - run: npm ci
       - run: npm publish
         env:
