--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@vivekdebugs/hello-world-package",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "publishConfig": {
     "@vivekdebugs:registry": "https://npm.pkg.github.com"
   },
+  "files": [
+    "index.js"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "exit 0"
