--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,6 +12,7 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm test
+      - run: npm run build
 
   publish-gpr:
     needs: build
