--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vivekdebugs/hello-world-package",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "",
   "publishConfig": {
     "@vivekdebugs:registry": "https://npm.pkg.github.com"
@@ -11,7 +11,7 @@
   "main": "index.js",
   "scripts": {
     "test": "exit 0",
-    "build": "rm -rf build && copyfiles index.js build/"
+    "build": "rm -rf build && copyfiles index.js foo.txt build/"
   },
   "author": "",
   "license": "ISC",
