--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@vivekdebugs/hello-world-package",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "",
   "publishConfig": {
     "@vivekdebugs:registry": "https://npm.pkg.github.com"
   },
-  "files": [
-    "build/*"
-  ],
+  "directories": {
+    "build": "./build"
+  },
   "main": "index.js",
   "scripts": {
     "test": "exit 0",
