--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@vivekdebugs/hello-world-package",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "",
   "publishConfig": {
     "@vivekdebugs:registry": "https://npm.pkg.github.com"
   },
-  "directories": {
-    "build": "./build"
-  },
+  "files": [
+    "build"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "exit 0",
