--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@vivekdebugs/hello-world-package",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "",
   "publishConfig": {
     "@vivekdebugs:registry": "https://npm.pkg.github.com"
   },
-  "files": [
-    "./build"
-  ],
+  "directories": {
+    "build": "./build"
+  },
   "main": "index.js",
   "scripts": {
     "test": "exit 0",
-    "build": "rm -rf build && copyfiles index.js foo.txt build/"
+    "build": "rm -rf build && copyfiles index.js secret.js build/"
   },
   "author": "",
   "license": "ISC",
